network/k8s-net/podspec.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: go-web
spec:
  containers: 
    - name: go-web
      image: paulokinjo/go-web:v0.0.1
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5
      readinessProbe:
        httpGet: 
          path: /
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5
