network/k8s-net/service-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: myapp
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
