network/k8s-net/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: demo-db
  policyTypes:
    - "Ingress"
    - "Egress"
  ingress:
  - from: 
    - podSelector:
        matchLabels:
          app: demo
